another fixing overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -871,6 +871,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 150ms;
 }
 
+html,
 body {
   width: 100%;
   overflow-x: hidden;
