--- a/src/input.css
+++ b/src/input.css
@@ -6,6 +6,7 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   width: 100%;
   overflow-x: hidden;
